# cfs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  cfs.c  cfs.h  filesystem.c  filesystem.h
include/cfs/: cfs.h
tests/: CMakeLists.txt  CMakePresets.json  cfs  cfs_impl.c  main.c  main.cpp  run_tests.sh  tests.h  utils.h
tests/linux/: Dockerfile
tests/windows/: run_test.bat
